deploy/deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  template:
    metadata:
      name: webapp
      labels:
        role: webapp
    spec:
      containers:
        - name: webapp
          image: gcr.io/rails-lab-260819/appbasico:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
