deploy/service.yml

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    role: webapp
  type: NodePort
  type: LoadBalancer (um ou outro)
